# rooster_maker

./: app.py  main.py  main.spec  playground.ipynb  pyproject.toml  requirements.txt  schedule_output.xlsx  test.ipynb  test_run.ipynb
data/: EDUCATORS 2023.xlsx  EDUCATORS 2025.xlsx  SCHOOL GARDENS 2025.xlsx  SCHOOLS 2023.xlsx  SCHOOLS 2025.csv  SCHOOLS 2025.xlsx  Template educators.xlsx  Template educators1.xlsx  Template school garden.xlsx  Template schools.xlsx
src/: constraint_functions.py  constraints.py  data_validations.py  excel_output_formatter.py  extract_transform_load.py  garden.py  legacy_code.py  objective_function.py  runner.py  solver.py  streamlit.py
src/configs/: constraints_config.yaml  get_config.py  input_data_config.yaml  objective_config.yaml  visual_config.yaml
