[tool.poetry]
name = "cw-schooltuinen"
version = "0.1.0"
description = ""
authors = ["nils <nils@acmetric.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
pyyaml = "^6.0.2"
streamlit = "^1.41.1"
pyyaml = "^6.0.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
